# Motivate

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  LICENSES-3rd-PARTY.md  README.md  big sim.csv  build.sbt  output3cyclewalkup.csv  output3cyclewalkupcardown.csv  output_1.csv  preoutput.csv  scenario.yaml
.cargo/: config
config/: parameters.yaml  scenario.yaml
data/: Daily Rainfall.ipynb  Travel To Work.ipynb
output/big_output_1/: output_post intervention-1.csv  output_post intervention-2.csv  output_post intervention-3.csv  output_post intervention-4.csv  output_pre intervention-1.csv  output_pre intervention-2.csv  output_pre intervention-3.csv  output_pre intervention-4.csv
output/big_ranking_1/: output_1.csv  output_2.csv  output_3.csv  output_4.csv  output_5.csv  output_6.csv
output/big_ranking_2/: output_1.csv  output_2.csv  output_3.csv  output_4.csv  output_5.csv  output_6.csv
output/big_ranking_3/: output_1.csv  output_2.csv  output_3.csv  output_4.csv  output_5.csv  output_6.csv
output/big_ranking_4/: output_1.csv  output_2.csv  output_3.csv  output_4.csv  output_5.csv  output_6.csv
output/first_jons_algo/: output_post intervention-1.csv  output_post intervention-2.csv  output_post intervention-3.csv  output_post intervention-4.csv  output_pre intervention-1.csv  (+3 more)
src/: agent.rs  agent_generation.rs  borough.rs  congestion.rs  debug.rs  gaussian.rs  intervention.rs  journey_type.rs  main.rs  neighbourhood.rs  scenario.rs  season.rs  simulation.rs  social_network.rs  statistics.rs  subculture.rs  transport_mode.rs  union_with.rs  weather.rs
(+113 files in other folders)
