[package]
name = "motivate"
version = "0.1.0"
authors = ["Robert Greener <robert.greener@kcl.ac.uk>"]

[dependencies]
maplit = "1.0.1"
itertools = "0.7.8"
rand = "0.5.3"
rayon = "1.0"
log = "0.4"
simple_logger = "0.5.0"
serde = { version = "1.0", features = ["rc"] }
serde_yaml = "0.7"
serde_derive = "1.0.70"

[profile.release]
debug = true
